# test-stripe

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
src/: manage.py
src/static/css/: base.css
src/static/js/: intent_item.js  session_item.js
src/stripe_app/: admin.py  apps.py  models.py  stripe.py  urls.py  views.py
src/stripe_app/management/commands/: create_admin.py  create_db_data.py
src/stripe_app/services/: db_services.py  stripe_services.py
src/stripe_app/tests/: conftest.py  test_db.py  test_utils.py  test_view.py
src/stripe_app/utils/: app_utils.py  db_utils.py
src/stripe_project/: __init__.py  asgi.py  containers.py  settings.py  urls.py  wsgi.py
src/templates/: base.html  fail.html
src/templates/components/: item_body.html  payment_intent.html
src/templates/stripe_app/: item.html  order.html
