[tool.poetry]
name = "test-stripe"
version = "0.1.0"
description = ""
authors = ['Kimiyori']
readme = "README.md"
packages = [{include = "test_stripe"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
psycopg2-binary = "^2.9.5"
stripe = "^5.0.0"
djangorestframework = "^3.14.0"
environs = "^9.5.0"
dependency-injector = "^4.40.0"
django-debug-toolbar = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
